Update message, fixed search bugs

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -786,15 +786,61 @@ passGradeColor = Passing grade color
 
 secondInterval = Second interval
 
-tab.activityCompletion = Activity Completion
-tab.component          = Components
-tab.coursemodule       = Course Modules
-tab.event              = Events
-tab.grades             = Grades
-tab.logs               = Logs
-tab.risk               = Risk of dropping out
-tab.section            = Sections
-tab.visualization      = Visual analytic
+tab.activityCompletion                = Activity Completion
+tab.component                         = Components
+tab.coursemodule                      = Course Modules
+tab.enrolleduser                      = Enrolled
+tab.event                             = Events
+tab.grades                            = Grades
+tab.logs                              = Logs
+tab.noenrolleduser.activitycompletion = Activities completion
+tab.noenrolleduser.all                = All
+tab.noenrolleduser.author             = Authors:
+tab.noenrolleduser.betweendates       = Between {0} and {1} days
+tab.noenrolleduser.cache              = Local Files
+tab.noenrolleduser.confirmation       = Confirmation
+tab.noenrolleduser.confirmationtext   = Are you sure to remove the cache of the selected course?
+tab.noenrolleduser.coursedata         = Course data
+tab.noenrolleduser.days               = Days
+tab.noenrolleduser.empty              = N.A
+tab.noenrolleduser.exportcsv          = Export CSV...
+tab.noenrolleduser.exportcsvdesglosed = Export breakdown CSV...
+tab.noenrolleduser.exportpng          = Export PNG...
+tab.noenrolleduser.fail               = Fail
+tab.noenrolleduser.favorite           = Starred
+tab.noenrolleduser.filteredusers      = Filtered users
+tab.noenrolleduser.future             = Future
+tab.noenrolleduser.gradeitems         = Grades
+tab.noenrolleduser.hours              = Hours
+tab.noenrolleduser.inprogress         = In progress
+tab.noenrolleduser.lastaccess         = Last access: 
+tab.noenrolleduser.license            = License: MIT
+tab.noenrolleduser.logs               = Logs
+tab.noenrolleduser.minutes            = Minutes
+tab.noenrolleduser.moodle             = Moodle: 
+tab.noenrolleduser.never              = Never
+tab.noenrolleduser.noActivity         = No activity
+tab.noenrolleduser.nousers            = No coincidences
+tab.noenrolleduser.online_false       = Mode: Offline
+tab.noenrolleduser.online_true        = Mode: Online
+tab.noenrolleduser.pass               = Pass
+tab.noenrolleduser.past               = Past
+tab.noenrolleduser.recent             = Recent
+tab.noenrolleduser.restoredefault     = Are you sure you want to restore the default settings?
+tab.noenrolleduser.search             = Search
+tab.noenrolleduser.seconds            = Seconds
+tab.noenrolleduser.sectionplaceholder = Front page
+tab.noenrolleduser.see                = See 
+tab.noenrolleduser.selectall          = Select/Deselect all
+tab.noenrolleduser.selectedUsers      = Selected users
+tab.noenrolleduser.session            = # of sessions: 
+tab.noenrolleduser.stats              = Statistics
+tab.noenrolleduser.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
+tab.noenrolleduser.thankstitle        = Acknowledgments:
+tab.noenrolleduser.total              = Total
+tab.risk                              = Risk of dropping out
+tab.section                           = Sections
+tab.visualization                     = Visual analytic
 
 text.activitycompletion = Activities completion
 text.all                = All
