--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -786,15 +786,61 @@ passGradeColor = Color de calificaci\u00F3n aprobada
 
 secondInterval = Segundo intervalo
 
-tab.activityCompletion = Finalizaci\u00F3n Actividad
-tab.component          = Componentes
-tab.coursemodule       = M\u00F3dulos curso
-tab.event              = Eventos
-tab.grades             = Calificaciones
-tab.logs               = Registros
-tab.risk               = Riesgo de abandono
-tab.section            = Secci\u00F3n
-tab.visualization      = An\u00E1lisis visual
+tab.activityCompletion                = Finalizaci\u00F3n Actividad
+tab.component                         = Componentes
+tab.coursemodule                      = M\u00F3dulos curso
+tab.enrolleduser                      = Matriculados
+tab.event                             = Eventos
+tab.grades                            = Calificaciones
+tab.logs                              = Registros
+tab.noenrolleduser.activitycompletion = Actividades finalizadas
+tab.noenrolleduser.all                = Todos
+tab.noenrolleduser.author             = Autores:
+tab.noenrolleduser.betweendates       = Entre {0} y {1} d\u00EDas
+tab.noenrolleduser.cache              = Archivos locales
+tab.noenrolleduser.confirmation       = Confirmaci\u00F3n
+tab.noenrolleduser.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
+tab.noenrolleduser.coursedata         = Datos del curso
+tab.noenrolleduser.days               = d\u00EDas
+tab.noenrolleduser.empty              = S.C
+tab.noenrolleduser.exportcsv          = Exportar CSV...
+tab.noenrolleduser.exportcsvdesglosed = Exportar CSV desglosado...
+tab.noenrolleduser.exportpng          = Exportar PNG...
+tab.noenrolleduser.fail               = Suspenso
+tab.noenrolleduser.favorite           = Destacados
+tab.noenrolleduser.filteredusers      = Usuarios filtrados
+tab.noenrolleduser.future             = Futuros
+tab.noenrolleduser.gradeitems         = Calificaciones
+tab.noenrolleduser.hours              = horas
+tab.noenrolleduser.inprogress         = En progreso
+tab.noenrolleduser.lastaccess         = \u00DAltimo acceso: 
+tab.noenrolleduser.license            = Licencia: MIT
+tab.noenrolleduser.logs               = Registros
+tab.noenrolleduser.minutes            = minutos
+tab.noenrolleduser.moodle             = Moodle: 
+tab.noenrolleduser.never              = Nunca
+tab.noenrolleduser.noActivity         = Sin actividad
+tab.noenrolleduser.nousers            = No hay coincidencias
+tab.noenrolleduser.online_false       = Modo: Offline
+tab.noenrolleduser.online_true        = Modo: Online
+tab.noenrolleduser.pass               = Aprobado
+tab.noenrolleduser.past               = Pasados
+tab.noenrolleduser.recent             = Recientes
+tab.noenrolleduser.restoredefault     = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
+tab.noenrolleduser.search             = Buscar
+tab.noenrolleduser.seconds            = segundos
+tab.noenrolleduser.sectionplaceholder = P\u00E1gina principal
+tab.noenrolleduser.see                = Ver 
+tab.noenrolleduser.selectall          = Seleccionar/Deseleccionar todos
+tab.noenrolleduser.selectedUsers      = Usuarios seleccionados
+tab.noenrolleduser.session            = N\u00BA de sesiones: 
+tab.noenrolleduser.stats              = Estad\u00EDsticas
+tab.noenrolleduser.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
+tab.noenrolleduser.thankstitle        = Agradecimientos:
+tab.noenrolleduser.total              = Total
+tab.risk                              = Riesgo de abandono
+tab.section                           = Secci\u00F3n
+tab.visualization                     = An\u00E1lisis visual
 
 text.activitycompletion = Actividades finalizadas
 text.all                = Todos
