--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -786,15 +786,61 @@ passGradeColor = Passando colore grade
 
 secondInterval = Secondo intervallo
 
-tab.activityCompletion = Completamento attivit\u00E0
-tab.component          = componenti
-tab.coursemodule       = Moduli del corso
-tab.event              = eventi
-tab.grades             = gradi
-tab.logs               = logs
-tab.risk               = Risk of dropping out
-tab.section            = Sezione
-tab.visualization      = Visual analytic
+tab.activityCompletion                = Completamento attivit\u00E0
+tab.component                         = componenti
+tab.coursemodule                      = Moduli del corso
+tab.enrolleduser                      = Enrolled
+tab.event                             = eventi
+tab.grades                            = gradi
+tab.logs                              = logs
+tab.noenrolleduser.activitycompletion = Activities completion
+tab.noenrolleduser.all                = All
+tab.noenrolleduser.author             = Authors:
+tab.noenrolleduser.betweendates       = Between {0} and {1} days
+tab.noenrolleduser.cache              = File locali
+tab.noenrolleduser.confirmation       = Confirmation
+tab.noenrolleduser.confirmationtext   = Are you sure to remove the cache of the selected course?
+tab.noenrolleduser.coursedata         = Course data
+tab.noenrolleduser.days               = giorni
+tab.noenrolleduser.empty              = N.A
+tab.noenrolleduser.exportcsv          = Export CSV...
+tab.noenrolleduser.exportcsvdesglosed = Export breakdown CSV...
+tab.noenrolleduser.exportpng          = Export PNG...
+tab.noenrolleduser.fail               = Fail
+tab.noenrolleduser.favorite           = Preferiti
+tab.noenrolleduser.filteredusers      = Filtered users
+tab.noenrolleduser.future             = Future
+tab.noenrolleduser.gradeitems         = Grades
+tab.noenrolleduser.hours              = Ore
+tab.noenrolleduser.inprogress         = In progress
+tab.noenrolleduser.lastaccess         = Ultimo accesso:
+tab.noenrolleduser.license            = License: MIT
+tab.noenrolleduser.logs               = Logs
+tab.noenrolleduser.minutes            = Minuti
+tab.noenrolleduser.moodle             = Moodle: 
+tab.noenrolleduser.never              = Mai
+tab.noenrolleduser.noActivity         = No activity
+tab.noenrolleduser.nousers            = Nessuna coincidenza
+tab.noenrolleduser.online_false       = Mode: Offline
+tab.noenrolleduser.online_true        = Mode: Online
+tab.noenrolleduser.pass               = Pass
+tab.noenrolleduser.past               = Past
+tab.noenrolleduser.recent             = Recente
+tab.noenrolleduser.restoredefault     = Sei sicuro di voler ripristinare le impostazioni di default?
+tab.noenrolleduser.search             = Search
+tab.noenrolleduser.seconds            = secondi
+tab.noenrolleduser.sectionplaceholder = Prima pagina
+tab.noenrolleduser.see                = See 
+tab.noenrolleduser.selectall          = Select/Deselect all
+tab.noenrolleduser.selectedUsers      = Selected users
+tab.noenrolleduser.session            = # of sessions: 
+tab.noenrolleduser.stats              = Statistiche
+tab.noenrolleduser.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
+tab.noenrolleduser.thankstitle        = Acknowledgments:
+tab.noenrolleduser.total              = Total
+tab.risk                              = Risk of dropping out
+tab.section                           = Sezione
+tab.visualization                     = Visual analytic
 
 text.activitycompletion = Activities completion
 text.all                = All
