--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -786,15 +786,61 @@ passGradeColor = Passando cor grau
 
 secondInterval = Segundo intervalo
 
-tab.activityCompletion = Conclus\u00E3o das atividades
-tab.component          = Componentes
-tab.coursemodule       = M\u00F3dulos do curso
-tab.event              = Eventos
-tab.grades             = Notas
-tab.logs               = Logs
-tab.risk               = Risk of dropping out
-tab.section            = Se\u00E7\u00E3o
-tab.visualization      = Visual analytic
+tab.activityCompletion                = Conclus\u00E3o das atividades
+tab.component                         = Componentes
+tab.coursemodule                      = M\u00F3dulos do curso
+tab.enrolleduser                      = Enrolled
+tab.event                             = Eventos
+tab.grades                            = Notas
+tab.logs                              = Logs
+tab.noenrolleduser.activitycompletion = Activities completion
+tab.noenrolleduser.all                = All
+tab.noenrolleduser.author             = Authors:
+tab.noenrolleduser.betweendates       = Between {0} and {1} days
+tab.noenrolleduser.cache              = Ficheiros locais
+tab.noenrolleduser.confirmation       = Confirmation
+tab.noenrolleduser.confirmationtext   = Are you sure to remove the cache of the selected course?
+tab.noenrolleduser.coursedata         = Course data
+tab.noenrolleduser.days               = Dias
+tab.noenrolleduser.empty              = N.A
+tab.noenrolleduser.exportcsv          = Export CSV...
+tab.noenrolleduser.exportcsvdesglosed = Export breakdown CSV...
+tab.noenrolleduser.exportpng          = Export PNG...
+tab.noenrolleduser.fail               = Fail
+tab.noenrolleduser.favorite           = Com estrela
+tab.noenrolleduser.filteredusers      = Filtered users
+tab.noenrolleduser.future             = Future
+tab.noenrolleduser.gradeitems         = Grades
+tab.noenrolleduser.hours              = Horas
+tab.noenrolleduser.inprogress         = In progress
+tab.noenrolleduser.lastaccess         = \u00DAltimo acesso:
+tab.noenrolleduser.license            = License: MIT
+tab.noenrolleduser.logs               = Logs
+tab.noenrolleduser.minutes            = Minutos
+tab.noenrolleduser.moodle             = Moodle: 
+tab.noenrolleduser.never              = Nunca
+tab.noenrolleduser.noActivity         = No activity
+tab.noenrolleduser.nousers            = Sem coincid\u00EAncias
+tab.noenrolleduser.online_false       = Mode: Offline
+tab.noenrolleduser.online_true        = Mode: Online
+tab.noenrolleduser.pass               = Pass
+tab.noenrolleduser.past               = Past
+tab.noenrolleduser.recent             = Recentes
+tab.noenrolleduser.restoredefault     = Tem certeza de que deseja restaurar as configura\u00E7\u00F5es padr\u00E3o?
+tab.noenrolleduser.search             = Search
+tab.noenrolleduser.seconds            = Segundos
+tab.noenrolleduser.sectionplaceholder = Primeira p\u00E1gina
+tab.noenrolleduser.see                = See 
+tab.noenrolleduser.selectall          = Select/Deselect all
+tab.noenrolleduser.selectedUsers      = Selected users
+tab.noenrolleduser.session            = # of sessions: 
+tab.noenrolleduser.stats              = Estat\u00EDsticas
+tab.noenrolleduser.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
+tab.noenrolleduser.thankstitle        = Acknowledgments:
+tab.noenrolleduser.total              = Total
+tab.risk                              = Risk of dropping out
+tab.section                           = Se\u00E7\u00E3o
+tab.visualization                     = Visual analytic
 
 text.activitycompletion = Activities completion
 text.all                = All
