--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -786,15 +786,61 @@ passGradeColor = Passing Grad Farbe
 
 secondInterval = Sekunden-Intervall
 
-tab.activityCompletion = Aktivit\u00E4tsabschluss
-tab.component          = Komponenten
-tab.coursemodule       = Kursmodule
-tab.event              = Veranstaltungen
-tab.grades             = Noten
-tab.logs               = Protokolle
-tab.risk               = Risk of dropping out
-tab.section            = Abschnitt
-tab.visualization      = Visual analytic
+tab.activityCompletion                = Aktivit\u00E4tsabschluss
+tab.component                         = Komponenten
+tab.coursemodule                      = Kursmodule
+tab.enrolleduser                      = Enrolled
+tab.event                             = Veranstaltungen
+tab.grades                            = Noten
+tab.logs                              = Protokolle
+tab.noenrolleduser.activitycompletion = Activities completion
+tab.noenrolleduser.all                = All
+tab.noenrolleduser.author             = Authors:
+tab.noenrolleduser.betweendates       = Between {0} and {1} days
+tab.noenrolleduser.cache              = Lokale Dateien
+tab.noenrolleduser.confirmation       = Confirmation
+tab.noenrolleduser.confirmationtext   = Are you sure to remove the cache of the selected course?
+tab.noenrolleduser.coursedata         = Course data
+tab.noenrolleduser.days               = Tage
+tab.noenrolleduser.empty              = N.A
+tab.noenrolleduser.exportcsv          = Export CSV...
+tab.noenrolleduser.exportcsvdesglosed = Export breakdown CSV...
+tab.noenrolleduser.exportpng          = Export PNG...
+tab.noenrolleduser.fail               = Fail
+tab.noenrolleduser.favorite           = Als Favorit markiert
+tab.noenrolleduser.filteredusers      = Filtered users
+tab.noenrolleduser.future             = Future
+tab.noenrolleduser.gradeitems         = Grades
+tab.noenrolleduser.hours              = Std
+tab.noenrolleduser.inprogress         = In progress
+tab.noenrolleduser.lastaccess         = Letzter Zugriff:
+tab.noenrolleduser.license            = License: MIT
+tab.noenrolleduser.logs               = Logs
+tab.noenrolleduser.minutes            = Protokoll
+tab.noenrolleduser.moodle             = Moodle: 
+tab.noenrolleduser.never              = noch nie
+tab.noenrolleduser.noActivity         = No activity
+tab.noenrolleduser.nousers            = Kein Zufall
+tab.noenrolleduser.online_false       = Mode: Offline
+tab.noenrolleduser.online_true        = Mode: Online
+tab.noenrolleduser.pass               = Pass
+tab.noenrolleduser.past               = Past
+tab.noenrolleduser.recent             = K\u00FCrzlich\r\n
+tab.noenrolleduser.restoredefault     = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
+tab.noenrolleduser.search             = Search
+tab.noenrolleduser.seconds            = Sekunden
+tab.noenrolleduser.sectionplaceholder = Titelseite
+tab.noenrolleduser.see                = See 
+tab.noenrolleduser.selectall          = Select/Deselect all
+tab.noenrolleduser.selectedUsers      = Selected Users
+tab.noenrolleduser.session            = # of sessions: 
+tab.noenrolleduser.stats              = Kursstatistiken
+tab.noenrolleduser.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
+tab.noenrolleduser.thankstitle        = Acknowledgments:
+tab.noenrolleduser.total              = Total
+tab.risk                              = Risk of dropping out
+tab.section                           = Abschnitt
+tab.visualization                     = Visual analytic
 
 text.activitycompletion = Activities completion
 text.all                = All
