--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -786,15 +786,61 @@ passGradeColor = En passant la couleur de qualit\u00E9
 
 secondInterval = deuxi\u00E8me intervalle
 
-tab.activityCompletion = Ach\u00E8vement d'activit\u00E9s
-tab.component          = Composants
-tab.coursemodule       = Modules de cours
-tab.event              = \u00C9v\u00E9nements
-tab.grades             = Les notes
-tab.logs               = Les journaux
-tab.risk               = Risk of dropping out
-tab.section            = Section
-tab.visualization      = Visual analytic
+tab.activityCompletion                = Ach\u00E8vement d'activit\u00E9s
+tab.component                         = Composants
+tab.coursemodule                      = Modules de cours
+tab.enrolleduser                      = Enrolled
+tab.event                             = \u00C9v\u00E9nements
+tab.grades                            = Les notes
+tab.logs                              = Les journaux
+tab.noenrolleduser.activitycompletion = Activities completion
+tab.noenrolleduser.all                = All
+tab.noenrolleduser.author             = Authors:
+tab.noenrolleduser.betweendates       = Between {0} and {1} days
+tab.noenrolleduser.cache              = Fichiers locaux
+tab.noenrolleduser.confirmation       = Confirmation
+tab.noenrolleduser.confirmationtext   = Are you sure to remove the cache of the selected course?
+tab.noenrolleduser.coursedata         = Course data
+tab.noenrolleduser.days               = Journ\u00E9es
+tab.noenrolleduser.empty              = N.A
+tab.noenrolleduser.exportcsv          = Export CSV...
+tab.noenrolleduser.exportcsvdesglosed = Export breakdown CSV...
+tab.noenrolleduser.exportpng          = Export PNG...
+tab.noenrolleduser.fail               = Fail
+tab.noenrolleduser.favorite           = Favoris\r\n
+tab.noenrolleduser.filteredusers      = Filtered users
+tab.noenrolleduser.future             = Future
+tab.noenrolleduser.gradeitems         = Grades
+tab.noenrolleduser.hours              = Heures
+tab.noenrolleduser.inprogress         = In progress
+tab.noenrolleduser.lastaccess         = Dernier acc\u00E8s:
+tab.noenrolleduser.license            = License: MIT
+tab.noenrolleduser.logs               = Logs
+tab.noenrolleduser.minutes            = Minutes
+tab.noenrolleduser.moodle             = Moodle: 
+tab.noenrolleduser.never              = Jamais
+tab.noenrolleduser.noActivity         = No activity
+tab.noenrolleduser.nousers            = Pas de co\u00EFncidences
+tab.noenrolleduser.online_false       = Mode: Offline
+tab.noenrolleduser.online_true        = Mode: Online
+tab.noenrolleduser.pass               = Pass
+tab.noenrolleduser.past               = Past
+tab.noenrolleduser.recent             = R\u00E9cente
+tab.noenrolleduser.restoredefault     = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
+tab.noenrolleduser.search             = Search
+tab.noenrolleduser.seconds            = Secondes
+tab.noenrolleduser.sectionplaceholder = Page de garde
+tab.noenrolleduser.see                = See 
+tab.noenrolleduser.selectall          = Select/Deselect all
+tab.noenrolleduser.selectedUsers      = Selected users
+tab.noenrolleduser.session            = # of sessions: 
+tab.noenrolleduser.stats              = Statistiques
+tab.noenrolleduser.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
+tab.noenrolleduser.thankstitle        = Acknowledgments:
+tab.noenrolleduser.total              = Total
+tab.risk                              = Risk of dropping out
+tab.section                           = Section
+tab.visualization                     = Visual analytic
 
 text.activitycompletion = Activities completion
 text.all                = All
