Gestionar las label creadas a lo largo del tiempo #74

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -141,6 +141,7 @@ clustering.hierarchical                  = Hierarchical
 clustering.invalid                       = Invalid clutering algorithm.\r\nIt doesn't have the cluster number parameter.
 clustering.label                         = Label
 clustering.logTypes                      = Types of logs
+clustering.manageLabels                  = Manage labels
 clustering.maxIterations                 = Max number of iterations
 clustering.minPts                        = Min. points per cluster
 clustering.numTrials                     = Number of trial
