Modificado el texto del botón

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -147,6 +147,7 @@ clustering.minPts                        = Min. points per cluster
 clustering.numTrials                     = Number of trial
 clustering.numberOfClusters              = Number of clusters
 clustering.reduce                        = Reduce dimension
+clustering.removeLabels                  = Delete selected
 clustering.silhouetteAnalysis            = Silhouette analysis
 clustering.standard                      = Standard
 clustering.table                         = Data table
