--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -147,6 +147,7 @@ clustering.minPts                        = M\u00EDn. de puntos por agrupaci\u00F
 clustering.numTrials                     = N\u00FAmero de intentos
 clustering.numberOfClusters              = N\u00FAmero de agrupaciones
 clustering.reduce                        = Reducir dimensi\u00F3n
+clustering.removeLabels                  = Borrar seleccionados
 clustering.silhouetteAnalysis            = An\u00E1lisis de silueta
 clustering.standard                      = Normal
 clustering.table                         = Tabla de datos
