Not enrolled user added

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -231,6 +231,7 @@ label.lastaccess                  = Last access Moodle
 label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = \u00DAltima actualitzaci\u00F3 local:
 label.loadingActivitiesCompletion = Desc\u00E0rrega d'Activitat de finalitzaci\u00F3 per a cada usuari...
+label.loadingcoursedata           = Downloading course data.
 label.loadingqualifier            = Generant el qualificador del curs ... (Aquest proc\u00E9s pot trigar una mica de temps)
 label.loadingstats                = Generant estad\u00EDstiques...
 label.loadingstudents             = S'han carregat les qualificacions dels estudiants...
@@ -786,61 +787,17 @@ passGradeColor = Passant el color de grau
 
 secondInterval = segon interval
 
-tab.activityCompletion                = Compleci\u00F3 de l'activitat
-tab.component                         = Components
-tab.coursemodule                      = M\u00F2duls del curs
-tab.enrolleduser                      = Enrolled
-tab.event                             = Esdeveniments
-tab.grades                            = Graus
-tab.logs                              = Registres
-tab.noenrolleduser.activitycompletion = Activities completion
-tab.noenrolleduser.all                = All
-tab.noenrolleduser.author             = Authors:
-tab.noenrolleduser.betweendates       = Between {0} and {1} days
-tab.noenrolleduser.cache              = Els arxius locals
-tab.noenrolleduser.confirmation       = Confirmation
-tab.noenrolleduser.confirmationtext   = Are you sure to remove the cache of the selected course?
-tab.noenrolleduser.coursedata         = Course data
-tab.noenrolleduser.days               = Dies
-tab.noenrolleduser.empty              = N.A
-tab.noenrolleduser.exportcsv          = Export CSV...
-tab.noenrolleduser.exportcsvdesglosed = Export breakdown CSV...
-tab.noenrolleduser.exportpng          = Export PNG...
-tab.noenrolleduser.fail               = Fail
-tab.noenrolleduser.favorite           = Destacats
-tab.noenrolleduser.filteredusers      = Filtered users
-tab.noenrolleduser.future             = Future
-tab.noenrolleduser.gradeitems         = Grades
-tab.noenrolleduser.hours              = Hores
-tab.noenrolleduser.inprogress         = In progress
-tab.noenrolleduser.lastaccess         = \u00DAltim acc\u00E9s:
-tab.noenrolleduser.license            = License: MIT
-tab.noenrolleduser.logs               = Logs
-tab.noenrolleduser.minutes            = Minuts
-tab.noenrolleduser.moodle             = Moodle: 
-tab.noenrolleduser.never              = Mai
-tab.noenrolleduser.noActivity         = No activity
-tab.noenrolleduser.nousers            = Sense coincid\u00E8ncies
-tab.noenrolleduser.online_false       = Mode: Offline
-tab.noenrolleduser.online_true        = Mode: Online
-tab.noenrolleduser.pass               = Pass
-tab.noenrolleduser.past               = Past
-tab.noenrolleduser.recent             = Recents
-tab.noenrolleduser.restoredefault     = Esteu segur que voleu restaurar la configuraci\u00F3 per defecte?
-tab.noenrolleduser.search             = Search
-tab.noenrolleduser.seconds            = Segons
-tab.noenrolleduser.sectionplaceholder = Portada
-tab.noenrolleduser.see                = See 
-tab.noenrolleduser.selectall          = Select/Deselect all
-tab.noenrolleduser.selectedUsers      = Selected users
-tab.noenrolleduser.session            = # of sessions: 
-tab.noenrolleduser.stats              = Estad\u00EDstiques
-tab.noenrolleduser.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
-tab.noenrolleduser.thankstitle        = Acknowledgments:
-tab.noenrolleduser.total              = Total
-tab.risk                              = Risk of dropping out
-tab.section                           = Secci\u00F3
-tab.visualization                     = Visual analytic
+tab.activityCompletion = Compleci\u00F3 de l'activitat
+tab.component          = Components
+tab.coursemodule       = M\u00F2duls del curs
+tab.enrolleduser       = Enrolled
+tab.event              = Esdeveniments
+tab.grades             = Graus
+tab.logs               = Registres
+tab.noenrolleduser     = Not enrolled
+tab.risk               = Risk of dropping out
+tab.section            = Secci\u00F3
+tab.visualization      = Visual analytic
 
 text.activitycompletion = Activities completion
 text.all                = All
