Added boxplot log, violin log and bubble logarithmic

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -8,9 +8,12 @@ BOXPLOT.yAxisTitle = Calificaciones
 
 BUBBLE = Compromiso
 
-BUBBLE.limitDays  = L\u00EDmite m\u00E1ximo
-BUBBLE.xAxisTitle = D\u00EDas desde el \u00FAltimo acceso al Curso
-BUBBLE.yAxisTitle = D\u00EDas desde el \u00FAltimo acceso a Moodle
+BUBBLE.limitDays              = L\u00EDmite m\u00E1ximo
+BUBBLE.xAxisTitle             = D\u00EDas transcurridos del \u00FAltimo acceso al Curso hasta {0}
+BUBBLE.yAxisTitle             = D\u00EDas transcurridos del \u00FAltimo acceso a MoodleS hasta {0}
+
+BUBBLE_LOGARITHMIC.xAxisTitle = Tiempo transcurrido del \u00FAltimo acceso al Curso hasta {0}
+BUBBLE_LOGARITHMIC.yAxisTitle = Tiempo transcurrido del \u00FAltimo acceso a Moodle hasta {0}
 
 CALIFICATION_BAR = Calificaciones %
 
@@ -19,8 +22,10 @@ CALIFICATION_BAR.yAxisTitle = Usuarios matriculados #
 
 CUM_LINE = Acumulados
 
-CUM_LINE.xAxisTitle = {0} Limite Superior
+CUM_LINE.xAxisTitle = {0}
 CUM_LINE.yAxisTitle = Registros
+
+Days = d\u00EDas
 
 GRADE_REPORT_TABLE = Calificaciones
 
@@ -29,6 +34,8 @@ GROUP_BOXPLOT = BoxPlot de Grupos
 HEAT_MAP = Heatmap
 
 HEAT_MAP.xAxisTitle = {0}
+
+Hours = horas
 
 LINE = L\u00EDneas
 
@@ -79,36 +86,6 @@ VIOLIN = Violin
 
 VIOLIN.xAxisTitle = \u00CDtems de calificaci\u00F3n
 VIOLIN.yAxisTitle = Calificaciones
-
-a.activitycompletion = Actividades finalizadas
-a.all                = Todos
-a.author             = Autores:
-a.betweendates       = Entre {0} y {1} d\u00EDas
-a.cache              = Archivos locales
-a.confirmation       = Confirmaci\u00F3n
-a.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
-a.coursedata         = Datos del curso
-a.days               = d\u00EDas
-a.empty              = S.C
-a.exportcsv          = Exportar CSV...
-a.exportcsvdesglosed = Exportar CSV desglosado...
-a.exportpng          = Exportar PNG...
-a.fail               = Suspenso
-a.favorite           = Destacados
-a.filteredusers      = Usuarios filtrados
-a.future             = Futuros
-a.gradeitems         = Calificaciones
-a.hours              = horas
-a.inprogress         = En progreso
-a.lastaccess         = \u00DAltimo acceso: 
-a.license            = Licencia: MIT
-a.logs               = Registros
-a.minutes            = minutos
-a.moodle             = Moodle: 
-a.never              = Nunca
-a.noActivity         = Sin actividad
-a.nousers            = No hay coincidencias
-a.online_false       = Modo: Offline
 
 about_app = Acerca de la aplicaci\u00F3n
 
