--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -8,9 +8,12 @@ BOXPLOT.yAxisTitle = Grades
 
 BUBBLE = Engagement
 
-BUBBLE.limitDays  = Maximum limit
-BUBBLE.xAxisTitle = Days since the last access to the Course
-BUBBLE.yAxisTitle = Days since the last access to Moodle
+BUBBLE.limitDays              = Maximum limit
+BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
+BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
+
+BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
+BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
 
 CALIFICATION_BAR = Grades %
 
@@ -22,6 +25,8 @@ CUM_LINE = Cumulative Log
 CUM_LINE.xAxisTitle = {0}
 CUM_LINE.yAxisTitle = Logs
 
+Days = Tage
+
 GRADE_REPORT_TABLE = Noten
 
 GROUP_BOXPLOT = Gruppen-Boxplot
@@ -29,6 +34,8 @@ GROUP_BOXPLOT = Gruppen-Boxplot
 HEAT_MAP = Heatmap
 
 HEAT_MAP.xAxisTitle = {0}
+
+Hours = Std
 
 LINE = Linien
 
