Update text traduction

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -151,6 +151,8 @@ choiceBox.YEAR_MONTH   = Monate
 choiceBox.YEAR_QUARTER = Viertel
 choiceBox.YEAR_WEEK    = Wochen
 
+confirmation = Confirmation
+
 cutGrade = Grade zu Pass
 
 displayXScaleTitle = Titel X-Achse
@@ -158,6 +160,8 @@ displayXScaleTitle = Titel X-Achse
 displayYScaleTitle = Titel der Y-Achse
 
 emptyGradeColor = Farbe leer Grad
+
+error = Error
 
 error.chargeconfiguration = Fehler bei der Konfiguration importieren
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
@@ -202,6 +206,8 @@ header.passwordDateTime         = Passwort f\u00FCr das vorherige Datum:
 header.passwordIncorrectMessage = Falsches Passwort
 
 horizontalMode = Horizontal-Modus
+
+information = Information
 
 initialGroups = Erste Gruppen
 
@@ -811,11 +817,15 @@ text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Lokale Dateien
+text.component          = Component
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.coursedata         = Course data
+text.coursemodule       = Course Module
+text.datetime           = Date and time
 text.days               = Tage
 text.empty              = N.A
+text.event              = Event
 text.exportcsv          = Export CSV...
 text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
@@ -826,6 +836,7 @@ text.future             = Future
 text.gradeitems         = Grades
 text.hours              = Std
 text.inprogress         = In progress
+text.ip                 = IP Address
 text.lastaccess         = Letzter Zugriff:
 text.license            = License: MIT
 text.logs               = Logs
@@ -836,6 +847,7 @@ text.noActivity         = No activity
 text.nousers            = Kein Zufall
 text.online_false       = Mode: Offline
 text.online_true        = Mode: Online
+text.origin             = Origin
 text.pass               = Pass
 text.past               = Past
 text.recent             = K\u00FCrzlich\r\n
@@ -866,6 +878,10 @@ tooltip.rol              = Rol
 tooltipDecimals = dezimal Tooltip
 
 useQuartile = Mit Quartile
+
+warning = Warning
+
+warning.nofound = No result matches in the search.
 
 zeroLineColor = Nullinie Farbe
 
