--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -151,6 +151,8 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semanas
 
+confirmation = Confirmaci\u00F3n
+
 cutGrade = Nota de corte
 
 displayXScaleTitle = T\u00EDtulo del eje X
@@ -158,6 +160,8 @@ displayXScaleTitle = T\u00EDtulo del eje X
 displayYScaleTitle = T\u00EDtulo del eje Y
 
 emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
+
+error = Error
 
 error.chargeconfiguration = Error al importar la configuraci\u00F3n
 error.csvparsing          = Error al descargar el CSV de los registros. Probablemente no tengas permiso de acceso a los registros.
@@ -202,6 +206,8 @@ header.passwordDateTime         = Fecha de la contrase\u00F1a antigua:
 header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
 
 horizontalMode = Modo horizontal
+
+information = Informaci\u00F3n
 
 initialGroups = Grupos iniciales
 
@@ -811,11 +817,15 @@ text.all                = Todos
 text.author             = Autores:
 text.betweendates       = Entre {0} y {1} d\u00EDas
 text.cache              = Archivos locales
+text.component          = Componente
 text.confirmation       = Confirmaci\u00F3n
 text.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
 text.coursedata         = Datos del curso
+text.coursemodule       = M\u00F3dulo del curso
+text.datetime           = Fecha y hora
 text.days               = d\u00EDas
 text.empty              = S.C
+text.event              = Evento
 text.exportcsv          = Exportar CSV...
 text.exportcsvdesglosed = Exportar CSV desglosado...
 text.exportpng          = Exportar PNG...
@@ -826,6 +836,7 @@ text.future             = Futuros
 text.gradeitems         = Calificaciones
 text.hours              = horas
 text.inprogress         = En progreso
+text.ip                 = Direcci\u00F3n IP
 text.lastaccess         = \u00DAltimo acceso: 
 text.license            = Licencia: MIT
 text.logs               = Registros
@@ -836,6 +847,7 @@ text.noActivity         = Sin actividad
 text.nousers            = No hay coincidencias
 text.online_false       = Modo: Offline
 text.online_true        = Modo: Online
+text.origin             = Origen
 text.pass               = Aprobado
 text.past               = Pasados
 text.recent             = Recientes
@@ -866,6 +878,10 @@ tooltip.rol              = Rol
 tooltipDecimals = Informaci\u00F3n de decimales
 
 useQuartile = Con cuartiles
+
+warning = Advertencia
+
+warning.nofound = No hay resultados en la b\u00FAsqueda.
 
 zeroLineColor = Color de la l\u00EDnea cero
 
