--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -151,6 +151,8 @@ choiceBox.YEAR_MONTH   = Mois
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semaines
 
+confirmation = Confirmation
+
 cutGrade = Niveau de passe
 
 displayXScaleTitle = Titre de l'axe X
@@ -158,6 +160,8 @@ displayXScaleTitle = Titre de l'axe X
 displayYScaleTitle = Titre de l'axe Y
 
 emptyGradeColor = Couleur qualit\u00E9 vide
+
+error = Error
 
 error.chargeconfiguration = Erreur lors de l'importation de la configuration
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
@@ -202,6 +206,8 @@ header.passwordDateTime         = Date pr\u00E9c\u00E9dente mot de passe:
 header.passwordIncorrectMessage = Mot de passe incorrect
 
 horizontalMode = mode horizontal
+
+information = Information
 
 initialGroups = Groupes initiaux
 
@@ -811,11 +817,15 @@ text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Fichiers locaux
+text.component          = Component
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.coursedata         = Course data
+text.coursemodule       = Course Module
+text.datetime           = Date and time
 text.days               = Journ\u00E9es
 text.empty              = N.A
+text.event              = Event
 text.exportcsv          = Export CSV...
 text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
@@ -826,6 +836,7 @@ text.future             = Future
 text.gradeitems         = Grades
 text.hours              = Heures
 text.inprogress         = In progress
+text.ip                 = IP Address
 text.lastaccess         = Dernier acc\u00E8s:
 text.license            = License: MIT
 text.logs               = Logs
@@ -836,6 +847,7 @@ text.noActivity         = No activity
 text.nousers            = Pas de co\u00EFncidences
 text.online_false       = Mode: Offline
 text.online_true        = Mode: Online
+text.origin             = Origin
 text.pass               = Pass
 text.past               = Past
 text.recent             = R\u00E9cente
@@ -866,6 +878,10 @@ tooltip.rol              = Rol
 tooltipDecimals = infobulle d\u00E9cimal
 
 useQuartile = Cvec quartiles
+
+warning = Warning
+
+warning.nofound = No result matches in the search.
 
 zeroLineColor = Couleur de la ligne z\u00E9ro
 
