--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -151,6 +151,8 @@ choiceBox.YEAR_MONTH   = mesi
 choiceBox.YEAR_QUARTER = alloggio
 choiceBox.YEAR_WEEK    = settimane
 
+confirmation = Confirmation
+
 cutGrade = Grado di passaggio
 
 displayXScaleTitle = Titolo asse X
@@ -158,6 +160,8 @@ displayXScaleTitle = Titolo asse X
 displayYScaleTitle = Titolo asse Y
 
 emptyGradeColor = Colore grade vuoto
+
+error = Error
 
 error.chargeconfiguration = Errore durante l'importazione della configurazione
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
@@ -202,6 +206,8 @@ header.passwordDateTime         = Data precedente password:
 header.passwordIncorrectMessage = Password non corretta
 
 horizontalMode = modalit\u00E0 orizzontale
+
+information = Information
 
 initialGroups = Gruppi iniziali
 
@@ -811,11 +817,15 @@ text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = File locali
+text.component          = Component
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.coursedata         = Course data
+text.coursemodule       = Course Module
+text.datetime           = Date and time
 text.days               = giorni
 text.empty              = N.A
+text.event              = Event
 text.exportcsv          = Export CSV...
 text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
@@ -826,6 +836,7 @@ text.future             = Future
 text.gradeitems         = Grades
 text.hours              = Ore
 text.inprogress         = In progress
+text.ip                 = IP Address
 text.lastaccess         = Ultimo accesso:
 text.license            = License: MIT
 text.logs               = Logs
@@ -836,6 +847,7 @@ text.noActivity         = No activity
 text.nousers            = Nessuna coincidenza
 text.online_false       = Mode: Offline
 text.online_true        = Mode: Online
+text.origin             = Origin
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recente
@@ -866,6 +878,10 @@ tooltip.rol              = Rol
 tooltipDecimals = decimale tooltip
 
 useQuartile = Con quartili
+
+warning = Warning
+
+warning.nofound = No result matches in the search.
 
 zeroLineColor = Colore della linea Zero
 
