--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -151,6 +151,8 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Quartos
 choiceBox.YEAR_WEEK    = Semanas
 
+confirmation = Confirmation
+
 cutGrade = Grau de passagem
 
 displayXScaleTitle = T\u00EDtulo X eixo
@@ -158,6 +160,8 @@ displayXScaleTitle = T\u00EDtulo X eixo
 displayYScaleTitle = T\u00EDtulo do eixo Y
 
 emptyGradeColor = Cor grau vazia
+
+error = Error
 
 error.chargeconfiguration = Erro ao importar a configura\u00E7\u00E3o
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
@@ -202,6 +206,8 @@ header.passwordDateTime         = Senha da data anterior:
 header.passwordIncorrectMessage = Senha incorreta
 
 horizontalMode = modo horizontal
+
+information = Information
 
 initialGroups = Grupos iniciais
 
@@ -811,11 +817,15 @@ text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Ficheiros locais
+text.component          = Component
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.coursedata         = Course data
+text.coursemodule       = Course Module
+text.datetime           = Date and time
 text.days               = Dias
 text.empty              = N.A
+text.event              = Event
 text.exportcsv          = Export CSV...
 text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
@@ -826,6 +836,7 @@ text.future             = Future
 text.gradeitems         = Grades
 text.hours              = Horas
 text.inprogress         = In progress
+text.ip                 = IP Address
 text.lastaccess         = \u00DAltimo acesso:
 text.license            = License: MIT
 text.logs               = Logs
@@ -836,6 +847,7 @@ text.noActivity         = No activity
 text.nousers            = Sem coincid\u00EAncias
 text.online_false       = Mode: Offline
 text.online_true        = Mode: Online
+text.origin             = Origin
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recentes
@@ -866,6 +878,10 @@ tooltip.rol              = Rol
 tooltipDecimals = decimal dica
 
 useQuartile = Com quartis
+
+warning = Warning
+
+warning.nofound = No result matches in the search.
 
 zeroLineColor = Zero cor de linha
 
