--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -151,6 +151,8 @@ choiceBox.YEAR_MONTH   = Mesos
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Setmanes
 
+confirmation = Confirmation
+
 cutGrade = Grau de passi
 
 displayXScaleTitle = T\u00EDtol de l'eix X
@@ -158,6 +160,8 @@ displayXScaleTitle = T\u00EDtol de l'eix X
 displayYScaleTitle = T\u00EDtol de l'eix I
 
 emptyGradeColor = El color de grau buida
+
+error = Error
 
 error.chargeconfiguration = Error a l'importar la configuraci\u00F3
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
@@ -202,6 +206,8 @@ header.passwordDateTime         = Contrasenya de data anterior:
 header.passwordIncorrectMessage = Contrasenya incorrecta
 
 horizontalMode = la manera horitzontal
+
+information = Information
 
 initialGroups = grups inicials
 
@@ -811,11 +817,15 @@ text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Els arxius locals
+text.component          = Component
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.coursedata         = Course data
+text.coursemodule       = Course Module
+text.datetime           = Date and time
 text.days               = Dies
 text.empty              = N.A
+text.event              = Event
 text.exportcsv          = Export CSV...
 text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
@@ -826,6 +836,7 @@ text.future             = Future
 text.gradeitems         = Grades
 text.hours              = Hores
 text.inprogress         = In progress
+text.ip                 = IP Address
 text.lastaccess         = \u00DAltim acc\u00E9s:
 text.license            = License: MIT
 text.logs               = Logs
@@ -836,6 +847,7 @@ text.noActivity         = No activity
 text.nousers            = Sense coincid\u00E8ncies
 text.online_false       = Mode: Offline
 text.online_true        = Mode: Online
+text.origin             = Origin
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recents
@@ -866,6 +878,10 @@ tooltip.rol              = Rol
 tooltipDecimals = informaci\u00F3 sobre eines decimal
 
 useQuartile = Cmb quartils
+
+warning = Warning
+
+warning.nofound = No result matches in the search.
 
 zeroLineColor = color de la l\u00EDnia zero
 
