--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -151,6 +151,8 @@ choiceBox.YEAR_MONTH   = Months
 choiceBox.YEAR_QUARTER = Quarters
 choiceBox.YEAR_WEEK    = Weeks
 
+confirmation = Confirmation
+
 cutGrade = Grade to pass
 
 displayXScaleTitle = Title X-axis
@@ -158,6 +160,8 @@ displayXScaleTitle = Title X-axis
 displayYScaleTitle = Title Y-axis
 
 emptyGradeColor = Color empty grade
+
+error = Error
 
 error.chargeconfiguration = Error when importing the configuration
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
@@ -202,6 +206,8 @@ header.passwordDateTime         = Previous date password:
 header.passwordIncorrectMessage = Password incorrect
 
 horizontalMode = Horizontal mode
+
+information = Information
 
 initialGroups = Initial Groups
 
@@ -811,11 +817,15 @@ text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Local Files
+text.component          = Component
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.coursedata         = Course data
+text.coursemodule       = Course Module
+text.datetime           = Date and time
 text.days               = Days
 text.empty              = N.A
+text.event              = Event
 text.exportcsv          = Export CSV...
 text.exportcsvdesglosed = Export breakdown CSV...
 text.exportpng          = Export PNG...
@@ -826,6 +836,7 @@ text.future             = Future
 text.gradeitems         = Grades
 text.hours              = Hours
 text.inprogress         = In progress
+text.ip                 = IP Address
 text.lastaccess         = Last access: 
 text.license            = License: MIT
 text.logs               = Logs
@@ -836,6 +847,7 @@ text.noActivity         = No activity
 text.nousers            = No coincidences
 text.online_false       = Mode: Offline
 text.online_true        = Mode: Online
+text.origin             = Origin
 text.pass               = Pass
 text.past               = Past
 text.recent             = Recent
@@ -866,6 +878,10 @@ tooltip.rol              = Role
 tooltipDecimals = Decimal tooltip
 
 useQuartile = With quartiles
+
+warning = Warning
+
+warning.nofound = No result matches in the search.
 
 zeroLineColor = Zero line color
 
